--- a/lectures/1/Lecture1.html
+++ b/lectures/1/Lecture1.html
@@ -21,17 +21,17 @@
 <p><strong>تفاضل دو مجموعه:</strong>
 عناصری که تنها در یکی از دو مجموعه $A$ و $B$ باشند. به بیان ریاضی: 
     $A-B=A\cap \bar{B}$ یا $B-A=B\cap \bar{A}$</p>
-<h2 id="%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86-%D9%BE%D8%A7%DB%8C%D9%87-%D9%86%D8%B8%D8%B1%DB%8C%D9%87-%D9%85%D8%AC%D9%85%D9%88%D8%B9%D9%87%E2%80%8C%D9%87%D8%A7">&#1602;&#1608;&#1575;&#1606;&#1740;&#1606; &#1662;&#1575;&#1740;&#1607; &#1606;&#1592;&#1585;&#1740;&#1607; &#1605;&#1580;&#1605;&#1608;&#1593;&#1607;&#8204;&#1607;&#1575;</h2><p>$A\cup \Omega=\Omega$</p>
-<p>$A\cap \Omega=A$</p>
-<p>$A\cup \emptyset=A$</p>
-<p>$A\cap \emptyset=\emptyset$</p>
-<p>$B\subset A \Rightarrow A\cup B=B$</p>
-<p>$B\subset A \Rightarrow A\cap B=A$</p>
-<p>$A\subset B \; ,B\subset C \Rightarrow A\subset C$</p>
-<p>$A\cup B=B\cup A \;, A\cap B=B\cap A$</p>
-<p>$A\cup (B\cup C)=(A\cup B)\cup C \;, A\cap (B\cap C)=(A\cap B)\cap C$</p>
-<p>$A\cup (B\cap C)=(A\cup B)\cap (A\cup C)$</p>
-<p>$\overline{(A\cup B)}=\bar{A}\cap \bar{B} \;, \overline{(A\cap B)}=\bar{A}\cup \bar{B}$</p>
+<h2 id="%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86-%D9%BE%D8%A7%DB%8C%D9%87-%D9%86%D8%B8%D8%B1%DB%8C%D9%87-%D9%85%D8%AC%D9%85%D9%88%D8%B9%D9%87%E2%80%8C%D9%87%D8%A7">&#1602;&#1608;&#1575;&#1606;&#1740;&#1606; &#1662;&#1575;&#1740;&#1607; &#1606;&#1592;&#1585;&#1740;&#1607; &#1605;&#1580;&#1605;&#1608;&#1593;&#1607;&#8204;&#1607;&#1575;</h2><p>1-$A\cup \Omega=\Omega$</p>
+<p>2-$A\cap \Omega=A$</p>
+<p>3-$A\cup \emptyset=A$</p>
+<p>4-$A\cap \emptyset=\emptyset$</p>
+<p>5-$B\subset A \Rightarrow A\cup B=B$</p>
+<p>6-$B\subset A \Rightarrow A\cap B=A$</p>
+<p>7-$A\subset B \; ,B\subset C \Rightarrow A\subset C$</p>
+<p>8-$A\cup B=B\cup A \;, A\cap B=B\cap A$</p>
+<p>9-$A\cup (B\cup C)=(A\cup B)\cup C \;, A\cap (B\cap C)=(A\cap B)\cap C$</p>
+<p>10-$A\cup (B\cap C)=(A\cup B)\cap (A\cup C)$</p>
+<p>11-$\overline{(A\cup B)}=\bar{A}\cap \bar{B} \;, \overline{(A\cap B)}=\bar{A}\cup \bar{B}$</p>
 <h2 id="%D8%A7%D9%81%D8%B1%D8%A7%D8%B2">&#1575;&#1601;&#1585;&#1575;&#1586;</h2><p>مجموعه‌های غیرتهی $A_1,A_2,...,A_m$ را افرازی از مجموعه مرجع $\Omega$ می‌نامیم چنانچه: 
     \begin{align*}
         \forall i \neq j;\: A_i \cap A_j=\emptyset\\
@@ -60,18 +60,6 @@ $A$ و $B$ دو پیشامد ناسازگارند هرگاه مجموعه‌ها
 پیشامدی که تنها یک عضو داشته باشد پیشامد ساده است.</p>
 
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
 
-     </div>
-</div>
-</div>
-</div>
 
 </div>
