--- a/lectures/9/Lecture2.html
+++ b/lectures/9/Lecture2.html
@@ -13,12 +13,8 @@
 امکان پذیر است.</p>
 $$F_X(x)=\Phi(\frac{x-\mu_x}{\sigma_x})$$<h2 id="%D8%AA%D9%82%D8%B1%DB%8C%D8%A8-%D8%AA%D9%88%D8%B2%DB%8C%D8%B9-%D8%AF%D9%88%D8%AC%D9%85%D9%84%D9%87-%D8%A7%DB%8C-%D8%A8%D8%A7-%D8%AA%D9%88%D8%B2%DB%8C%D8%B9-%D9%86%D8%B1%D9%85%D8%A7%D9%84">&#1578;&#1602;&#1585;&#1740;&#1576; &#1578;&#1608;&#1586;&#1740;&#1593; &#1583;&#1608;&#1580;&#1605;&#1604;&#1607; &#1575;&#1740; &#1576;&#1575; &#1578;&#1608;&#1586;&#1740;&#1593; &#1606;&#1585;&#1605;&#1575;&#1604;</h2><p>براي توزيع دوجمله‌اي $X\mathtt{\sim}Bin(n,p)$ ديديم كه</p>
 
-<pre><code>                              $$P(X=k)=P_n(k)=\binom{n}{k} p^k (1-p)^{n-k}$$
-
-</code></pre>
-$$E(X)=np \: , \quad Var(X)=np(1-p)$$
-<pre><code>                                                                                                                            
-</code></pre>
+                             $$P(X=k)=P_n(k)=\binom{n}{k} p^k (1-p)^{n-k}$$
+                                                                                                                        
 <p>دیدیم که برای $n$ بزرگ $(n&gt;20)$ و $p$
 کوچک $(p &lt;0.050)$ می توانیم توزیع
 دوجمله‌ای را با توزیع پواسون با پارامتر $\lambda=np$ تخمین بزنیم.</p>
