--- a/lectures/9/Lecture2.html
+++ b/lectures/9/Lecture2.html
@@ -38,7 +38,7 @@ $$P(k_1 \le X \le k_2) \thickapprox P(\frac{k_1-np}{\sqrt{np(1-p)}}\le Z\le \fra
 پیوستگی گفته می‌شود.</p>
 
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+</div>
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
