--- a/lectures/6/Lecture1.html
+++ b/lectures/6/Lecture1.html
@@ -4,33 +4,42 @@
     </div>
     <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
     </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-    <h3 id="%D9%88%D8%A7%D8%B1%DB%8C%D8%A7%D9%86%D8%B3-(Variance):">&#1608;&#1575;&#1585;&#1740;&#1575;&#1606;&#1587; (Variance):</h3><p>واریانس بیانگر میزان پراکندگی احتمال حول مقدار متوسط (میانگین) است.</p>
-    <p>طبق تعریف، توزیع $X$ یا واریانس متغیر تصادفی $X$ به صورت زیر است:</p>
-    $$ var(X) = E\left((X-E(X))^2\right) = E\left((X-\mu)^2\right) = \sigma^2 $$<p>واریانس کمیتی نامنفی است لذا متداول است که آن را با $ \sigma_x^2 $ یا $ \sigma^2 $ نشان دهند.</p>
-    <p>به $ E\left((X-\mu)^n\right) $ گشتاور مرکزی مرتبه $n$ام می‌گوییم. در این صورت
-    $ E\left((X-\mu)^2\right) $ گشتاور مرکزی مرتبه دوم است.</p>
-    <p>واریانس از جنس مربع متغیر تصادفی است.</p>
-    <h3 id="%D8%A7%D9%86%D8%AD%D8%B1%D8%A7%D9%81-%D9%85%D8%B9%DB%8C%D8%A7%D8%B1:">&#1575;&#1606;&#1581;&#1585;&#1575;&#1601; &#1605;&#1593;&#1740;&#1575;&#1585;:</h3><p>$\sigma$ را انحراف معیار (StandardDeviation) می‌نامند.</p>
-    <p>از تعریف امید ریاضی برای متغیر تصادفی گسسته نتیجه می‌شود که:</p>
-    $$ \sigma^2 = \sum_{i} (x_i - \mu)^2 P(x_i) $$<p></p>
-    <p>انحراف معیار از جنس خود متغیر تصادفی است.</p>
-    <h3 id="%D8%AE%D9%88%D8%A7%D8%B5-%D9%88%D8%A7%D8%B1%DB%8C%D8%A7%D9%86%D8%B3:">&#1582;&#1608;&#1575;&#1589; &#1608;&#1575;&#1585;&#1740;&#1575;&#1606;&#1587;:</h3><p><strong>خاصیت اول:</strong></p>
-    $$\sigma^2 = E[X^2] - (E[X])^2 $$<p><strong>نتیجه فرعی خاصیت اول:</strong></p>
-    $$E(X^2) \ge E^2(X) $$<p>$E(X^2)$ را میانگین مربعی (meansquare) می‌گویند.</p>
-    <p><strong>خاصیت دوم:</strong></p>
-    <p>اگر $Y = aX + b$ باشد، داریم:</p>
-    $$var(Y) = a^2var(X)$$<h3 id="%D8%AA%D9%88%D8%B2%DB%8C%D8%B9-%D8%A8%D8%B1%D9%86%D9%88%D9%84%DB%8C:">&#1578;&#1608;&#1586;&#1740;&#1593; &#1576;&#1585;&#1606;&#1608;&#1604;&#1740;:</h3><p>اگر خروجی یک آزمایش تصادفی فقط دو حالت موفقیت و شکست را داشته باشد، می‌توانیم این خروجی را با یک متغیر تصادفی شاخص $X$ مدل کرده و آن را یک متغیر تصادفی برنولی نامیم ($X\mathtt{\sim}Ber(p)$). اگر موفقيت را 1 و شكست را 0 در نظر بگيريم داريم:</p>
-    $$P(X=1) = p$$$$P(X=0) = 1-p$$<p>امید ریاضی و واریانس این متعیر تصادفی به صورت زیر می‌باشد:</p>
-    $$E[X] = 1(p) + 0(1-p) = p$$$$var(X) = E[X^2] - (E[X])^2 =(1^2(p) + 0^2(1-p)) - p^2 = p - p^2 = p(1-p) $$<h3 id="%D8%AA%D9%88%D8%B2%DB%8C%D8%B9-%D8%AF%D9%88%D8%AC%D9%85%D9%84%D9%87%E2%80%8C%D8%A7%DB%8C:">&#1578;&#1608;&#1586;&#1740;&#1593; &#1583;&#1608;&#1580;&#1605;&#1604;&#1607;&#8204;&#1575;&#1740;:</h3><p>اگر یک آزمایش تصادفی با دو خروجی موفقیت (با احتمال$p$) و شکست (با احتمال$1-p$) را $n$ بار تکرار کنیم، و متغیر تصادفی $X$ را تعداد موفقیت ها در $n$ آزمایش در نظر بگیریم، آنگاه $X$ دارای توزیع دوجمله‌ای (binomial) خواهد بود:</p>
-    $$X\mathtt{\sim}Bin(n,p)$$$$ :P_x(k)=P\{X=k\}=\binom{n}{k}p^kq^{n-k} \qquad : \qquad k=0,1,2,\dots,n $$<p>= تابع جرمی احتمال برای متغیر تصادفی دوجمله‌ای</p>
-    <p>برای سایر مقادیر $k$ داریم: $ P(k)=0 $</p>
-    <p>توزیع دوجمله‌ای در حالت خاص $ n=1 $ تبدیل به توزیع برنولی می‌شود.</p>
-    <h3 id="%D8%B1%D8%A7%D8%A8%D8%B7%D9%87-%D8%AA%D9%88%D8%B2%DB%8C%D8%B9-%D8%A8%D8%B1%D9%86%D9%88%D9%84%DB%8C-%D9%88-%D8%AA%D9%88%D8%B2%DB%8C%D8%B9-%D8%AF%D9%88%D8%AC%D9%85%D9%84%D9%87%E2%80%8C%D8%A7%DB%8C:">&#1585;&#1575;&#1576;&#1591;&#1607; &#1578;&#1608;&#1586;&#1740;&#1593; &#1576;&#1585;&#1606;&#1608;&#1604;&#1740; &#1608; &#1578;&#1608;&#1586;&#1740;&#1593; &#1583;&#1608;&#1580;&#1605;&#1604;&#1607;&#8204;&#1575;&#1740;:</h3><p>متغیر تصادفی دوجمله‌ای را می‌توانیم به صورت مجموع $n$ متغیر تصادفی مستقل برنولی در نظر بگیریم:</p>
-    $$ X=X_1+X_2+\dots+X_n \quad : \quad X_i\mathtt{\sim}Ber(p),\: X\mathtt{\sim}Bin(n,p) $$<p></p>
-    <h3 id="%D9%88%DB%8C%DA%98%DA%AF%DB%8C%E2%80%8C%D9%87%D8%A7%DB%8C-%DB%8C%DA%A9-%D9%85%D8%AA%D8%BA%DB%8C%D8%B1-%D8%AA%D8%B5%D8%A7%D8%AF%D9%81%DB%8C-%D8%A8%D8%A7-%D8%AA%D9%88%D8%B2%DB%8C%D8%B9-%D8%AF%D9%88%D8%AC%D9%85%D9%84%D9%87%E2%80%8C%D8%A7%DB%8C:">&#1608;&#1740;&#1688;&#1711;&#1740;&#8204;&#1607;&#1575;&#1740; &#1740;&#1705; &#1605;&#1578;&#1594;&#1740;&#1585; &#1578;&#1589;&#1575;&#1583;&#1601;&#1740; &#1576;&#1575; &#1578;&#1608;&#1586;&#1740;&#1593; &#1583;&#1608;&#1580;&#1605;&#1604;&#1607;&#8204;&#1575;&#1740;:</h3><p>یک: تعداد آزمایش‌های تصادفی ثابت و برابر $n$ است.</p>
-    <p>دو: آزمایش‌های تصادفی مستقل از هم هستند.</p>
-    <p>سه: هر آزمایش، فقط دو خروجی ممکن شکست و موفقیت دارد.</p>
-    <p>چهار: احتمال موفقیت در همه آزمایش‌ها یکسان و برابر $p$ است.</p>
+    <h3 id="%D8%AA%D9%88%D8%B2%DB%8C%D8%B9-%D9%BE%D9%88%D8%A7%D8%B3%D9%88%D9%86:">&#1578;&#1608;&#1586;&#1740;&#1593; &#1662;&#1608;&#1575;&#1587;&#1608;&#1606;:</h3><p>تابع جرمی متغیر تصادفی دوجمله‌ای در حالت حدی، که $ n \rightarrow \infty $ و  $ p \rightarrow 0 $، به این تابع جرمی تبدیل می‌شود که به آن توزیع پواسون می‌گوییم و با $X\mathtt{\sim}Poi(\lambda)$ نمایش می‌دهیم:</p>
+    $$ P\{X=k\} = e^{-\lambda}\frac{\lambda^k}{k!} \qquad:\qquad k=0,1,2,\dots,\infty $$<p>این توزیع یک توزیع احتمال است. زیرا تک تک مقادیر نامنفی هستند و مجموعشان برابر 1 است(اصول اول و دوم کولموگروف).</p>
+    $$ \sum_{i=0}^{\infty}P(X=i) = \sum_{i=0}^{\infty} e^{-\lambda}\frac{\lambda^i}{i!} = e^{-\lambda}\sum_{i=0}^{\infty}\frac{\lambda^i}{i!} = e^{-\lambda}e^{\lambda}=1 $$<h3 id="%D9%85%DB%8C%D8%A7%D9%86%DA%AF%DB%8C%D9%86-%D9%88-%D9%88%D8%A7%D8%B1%DB%8C%D8%A7%D9%86%D8%B3-%D8%AA%D9%88%D8%B2%DB%8C%D8%B9-%D9%BE%D9%88%D8%A7%D8%B3%D9%88%D9%86:">&#1605;&#1740;&#1575;&#1606;&#1711;&#1740;&#1606; &#1608; &#1608;&#1575;&#1585;&#1740;&#1575;&#1606;&#1587; &#1578;&#1608;&#1586;&#1740;&#1593; &#1662;&#1608;&#1575;&#1587;&#1608;&#1606;:</h3><p>از دو راه میانگین و واریانس توزیع پواسون را به دست می‌آوریم.</p>
+    <p><strong>راه اول:</strong> می‌دانیم که متغیر تصادفی پواسون معادل یک متغیر تصادفی دوجمله‌ای با $n \rightarrow \infty$ و $p \rightarrow 0$ است که $\lambda = np$. در نتیجه:</p>
+    $$E[X] = np = \lambda$$$$var(X) = np(1-p) = \lambda(1-p) = \lambda(1-0) = \lambda$$<p><strong>راه دوم:</strong> $E[X]$ و $E[X^2]$ را محاسبه کرده و واریانس را از رابطه‌ی $var(X) = E[X^2] - (E[X])^2$
+    به دست می‌آوریم.</p>
+    \begin{align*}
+        E[X] &amp;= \sum_{k=0}^{\infty}k e^{-\lambda}\frac{\lambda^k}{k!}\\
+        &amp;= \sum_{k=0}^{\infty} e^{-\lambda}\frac{\lambda \times \lambda^{k-1}}{(k-1)!}\\
+        &amp;= \lambda e^{-\lambda} \sum_{k=1}^{\infty} \frac{ \lambda^{k-1}}{(k-1)!}\\
+        &amp;= \lambda e^{-\lambda} \sum_{m=0}^{\infty} \frac{\lambda^m}{m!}\\
+        &amp;= \lambda e^{-\lambda}e^{\lambda}= \lambda
+    \end{align*}\begin{align*}
+        E[X^2] &amp;= \sum_{k=0}^{\infty}k^2 e^{-\lambda}\frac{\lambda^k}{k!}\\
+        &amp;= \lambda e^{-\lambda} \sum_{k=1}^{\infty} k \frac{ \lambda^{k-1}}{(k-1)!}\\
+        &amp;= \lambda e^{-\lambda} \sum_{k=1}^{\infty} (k+1-1) \frac{ \lambda^{k-1}}{(k-1)!}\\
+        &amp;= \lambda e^{-\lambda}\left(\sum_{k=2}^{\infty}\frac{\lambda^{k-1}}{(k-2)!} + \sum_{k=1}^{\infty}\frac{\lambda^{k-1}}{(k-1)!}\right)\\
+        &amp;= \lambda e^{-\lambda}\left(\lambda \sum_{k=2}^{\infty}\frac{\lambda^{k-2}}{(k-2)!} + \sum_{k=1}^{\infty}\frac{\lambda^{k-1}}{(k-1)!}\right)\\
+        &amp;= \lambda e^{-\lambda}(\lambda e^{\lambda}+  e^{\lambda}) = \lambda(\lambda + 1)
+    \end{align*}<p>در نتیجه:</p>
+    <p>$$var(X) = E[X^2] - (E[X])^2 = \lambda(\lambda+1) - \lambda^2 = \lambda$$</p>
+    <h3 id="%DA%A9%D8%A7%D8%B1%D8%A8%D8%B1%D8%AF-%D8%AA%D9%88%D8%B2%DB%8C%D8%B9-%D9%BE%D9%88%D8%A7%D8%B3%D9%88%D9%86:">&#1705;&#1575;&#1585;&#1576;&#1585;&#1583; &#1578;&#1608;&#1586;&#1740;&#1593; &#1662;&#1608;&#1575;&#1587;&#1608;&#1606;:</h3><p>تعداد پیشامدهای نادری که در یک بازه زمانی خاص و یا یک محدوده مکانی مشخص اتفاق می‌افتند، غالباً دارای توزیع پواسون هستند:</p>
+    <p>تعداد مکالمات تلفنی در یک مرکز سوئیچ در مدت مشخصی از زمان</p>
+    <p>تعداد نقاط خرابی روی طول مشخصی از یک نوار مغناطیسی یا پارچه</p>
+    <p>تعداد وقوع زلزله یا جنگ در مدت زمانی معین</p>
+    <p>تعداد اشتباهات چاپی در یک صفحه از هر کتاب</p>
+    <p>5تعداد خطاهای یک برنامه کامپیوتری با حجم معین که توسط یک فرد نوشته شده است</p>
+    <p>تعداد ذرات آلفا منتشر شده از یک مادۀ رادیواکتیو در طی زمان مشخص</p>
+    <p>تعداد بسته‌های داده دریافتی در یک مسیریاب شبکه اینترنت</p>
+    <p>تعداد بیمارانی که در هر ساعت به بخش اورژانس یک بیمارستان می‌رسند</p>
+    <h3 id="%D9%85%D8%AD%D8%A7%D8%B3%D8%A8%D9%87-%D8%B3%D8%B1%DB%8C%D8%B9-%D8%A7%D8%AD%D8%AA%D9%85%D8%A7%D9%84%D8%A7%D8%AA-%D9%BE%D9%88%D8%A7%D8%B3%D9%88%D9%86:">&#1605;&#1581;&#1575;&#1587;&#1576;&#1607; &#1587;&#1585;&#1740;&#1593; &#1575;&#1581;&#1578;&#1605;&#1575;&#1604;&#1575;&#1578; &#1662;&#1608;&#1575;&#1587;&#1608;&#1606;:</h3><p>می‌خواهیم به صورت بازگشتی، $P\{X=i+1\}$ را از روی $P\{X=i\}$ محاسبه کنیم.</p>
+    $$\frac{P\{X=i+1\}}{P\{X=i\}} = \frac{e^{-\lambda}\frac{\lambda^{i+1}}{(i+1)!}}{e^{-\lambda}\frac{\lambda^i}{i!}} = \frac{\lambda}{i+1}$$<p>بنابراین از رابطه بازگشتی $P\{X=i+1\} = \frac{\lambda}{i+1} P\{X=i\}$ استفاده می‌کنیم.</p>
+    <h3 id="%D8%AA%D9%82%D8%B1%DB%8C%D8%A8-%D9%BE%D9%88%D8%A7%D8%B3%D9%88%D9%86:">&#1578;&#1602;&#1585;&#1740;&#1576; &#1662;&#1608;&#1575;&#1587;&#1608;&#1606;:<a class="anchor-link" href="#%D8%AA%D9%82%D8%B1%DB%8C%D8%A8-%D9%BE%D9%88%D8%A7%D8%B3%D9%88%D9%86:">&#182;</a></h3><p>برای مدل کردن یک پیشامد با متغیر تصادفی دوجمله‌ای، باید شرایطی از قبیل مستقل بودن آزمایش‌ها و ثابت بودن احتمال موفقیت فراهم باشد. در تقریب پواسون اگر از برخی از این شرایط به مقدار اندکی تخطی شود، باز هم تقریب دقیقی از احتمال مورد نظر به دست می‌آید.</p>
+    <p>در موارد زیر می‌توانیم از متغیر تصادفی پواسون برای محاسبه احتمالات استفاده کنیم:</p>
+    <p>خروجی آزمایش ها کاملا مستقل از هم نباشند.</p>
+    <p>احتمال موفقیت در هر آزمایش به طور جزئی تغییر کند.</p>
     
     </div>
     </div>
