--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="UT PropStat" />
+    <meta name="description" content="UT ProbStat" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"></script>
-    <title>PropStat</title>
+    <title>ProbStat | Open Bookshelf</title>
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
       tex2jax: {
