--- a/lectures/1/Lecture3.html
+++ b/lectures/1/Lecture3.html
@@ -1,23 +1,44 @@
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-    <div class="jp-Cell-inputWrapper">
-    <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-    </div>
-    <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-    </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-    <h3 id="%D8%AA%D8%B9%DB%8C%DB%8C%D9%86-%D8%A7%D8%AD%D8%AA%D9%85%D8%A7%D9%84-%D9%BE%DB%8C%D8%B4%D8%A7%D9%85%D8%AF%E2%80%8C%D9%87%D8%A7:">&#1578;&#1593;&#1740;&#1740;&#1606; &#1575;&#1581;&#1578;&#1605;&#1575;&#1604; &#1662;&#1740;&#1588;&#1575;&#1605;&#1583;&#8204;&#1607;&#1575;:</h3><p>برای مدل کردن یک آزمایش تصادفی باید احتمال کلیه پیشامد‌ها را تعیین کنیم. اگر $ \Omega $ متشکل از $ N $ نقطه نمونه $ \omega_1,\omega_2,...,\omega_N $ باشد، کافی است احتمال پیشامد‌های ساده $ \{\omega_1\},\{\omega_2\},...,\{\omega_N\} $ را بدانیم.</p>
-    <p>در این صورت اگر $ A=\{\omega_{k_1},\omega_{k_2},...,\omega_{k_r}\} $ آنگاه:</p>
-    $$ P(A)=P(\{\omega_{k_1} \})+P(\{\omega_{k_2} \})+...+P(\{\omega_{k_N}\}) $$<p>اگر $ P(\{\omega_{k_i}\})=P_i $ آنگاه طبق اصل یک $ P_i\geq 0 $ و طبق اصل دو $ \sum_{i=1}^N P_i=1 $</p>
-    <p>اگر تعداد عناصر $ \Omega $ نامحدود ولی قابل شمارش باشد هم اصل فوق صادق است و داریم:</p>
-    <p>$ \sum_{i=1}^{\infty} P_i=1 $</p>
-    <h3 id="%D8%AA%D8%B9%D8%A7%D8%B1%DB%8C%D9%81-%D8%A7%D8%AD%D8%AA%D9%85%D8%A7%D9%84:">&#1578;&#1593;&#1575;&#1585;&#1740;&#1601; &#1575;&#1581;&#1578;&#1605;&#1575;&#1604;:</h3><p><strong>تعریف ذهنی یا شخصی (subjective):</strong> نظر و ارزیابی شخصی هر فرد نسبت به احتمال وقوع یک پیشامد است.</p>
-    <p><strong>تعریف بسامدی (frequency):</strong>  اگر یک آزمایش تصادفی را $ n $ بار انجام دهیم و در این $ n $ تکرار، پیشامد $ A $ به تعداد $ n_A $ اتفاق افتد آنگاه برای یک $ n $ بزرگ احتمال $ P(A) $ عددی نزدیک به $ \frac{n_A}{n} $ خواهد بود. به بیان ریاضی:</p>
-    <p>$ P(A)\cong \frac{n_A}{n} $</p>
-    <p><strong>تعریف حدی احتمال:</strong></p>
-    $$ P(A)=\lim_{n\to \infty} \frac{n_A}{n} $$<p><strong>تعریف کلاسیک احتمال:</strong></p>
-    $$ P(A)=\frac{N_A}{N} $$<p>محدودیت تعریف کلاسیک احتمال: در صورتی که نتایج آزمایش تصادفی متساوی‌الاحتمال نباشند، تعریف کلاسیک احتمال صحیح نیست.</p>
-    <p><strong>اصل ناکافی بودن دلیل:</strong>  اگر یک آزمایش تصادفی دارای $ N $ نتیجه ممکنه $ \omega_1,\omega_2,...,\omega_N $ باشد و ما هیچ اطلاعی درباره نحوه وقوع آنها نداشته باشیم، باید احتمال آنها را مساوی فرض کنیم. به بیان ریاضی:</p>
-    $$ P(\omega_1 )=P(\omega_2 )=...=P(\omega_N )=\frac{1}{N} $$
-    </div>
-    </div>
-    </div>
+<div class="container">
+
+    <section id="section1">
+
+        <h2>تعیین احتمال پیشامد‌ها</h2>
+        <p>برای مدل کردن یک آزمایش تصادفی باید احتمال کلیه پیشامد‌ها را تعیین کنیم.
+            اگر $\Omega$ متشکل از $Ν$
+            نقطه نمونه
+            $\omega_1,\omega_2,...,\omega_N$
+            باشد، کافی است احتمال پیشامد‌های ساده
+            $\{\omega_1\},\{\omega_2\},...,\{\omega_N\}$را بدانیم. در این صورت اگر
+            $A=\{\omega_{k_1},\omega_{k_2},...,\omega_{k_r}\} $
+            آنگاه:</p>
+        $$P(A)=P(\{\omega_{k_1} \})+P(\{\omega_{k_2} \})+...+P(\{\omega_{k_N}\}) $$<p>اگر$P(\{\omega_{k_i}\})=P_i$
+            آنگاه طبق اصل یک $ P_i\geq 0 $ و طبق اصل دو
+            $\sum_{i=1}^N P_i=1$.</p>
+        <p>اگر تعداد عناصر $\Omega$ نامحدود ولی قابل شمارش باشد هم اصل فوق صادق است و داریم:
+            $\sum_{i=1}^{\infty} P_i=1$</p>
+
+    </section>
+    <section id="section2">
+        <h2>تعاریف احتمال</h2>
+        <p><strong>تعریف ذهنی یا شخصی (subjective):</strong>
+            نظر و ارزیابی شخصی هر فرد نسبت به احتمال وقوع یک پیشامد است.</p>
+        <p><strong>تعریف بسامدی (frequency):</strong>
+            اگر یک آزمایش تصادفی را $n$ بار انجام دهیم و در این $n$ تکرار، پیشامد $A$ به تعداد
+            $ n_A $
+            اتفاق افتد آنگاه برای یک
+            $n$ بزرگ احتمال $P(A)$ عددی نزدیک به $\frac{n_A}{n}$ خواهد بود. به بیان ریاضی:</p>
+        <p>$P(A)\cong \frac{n_A}{n}$ \</p>
+        <p><strong>تعریف حدی احتمال:</strong>
+            $P(A)=\lim_{n\to \infty} \frac{n_A}{n}$</p>
+        <p><strong>تعریف کلاسیک احتمال:</strong>
+            $P(A)=\frac{N_A}{N}$
+            محدودیت تعریف کلاسیک احتمال:
+            در صورتی که نتایج آزمایش تصادفی متساوی‌الاحتمال نباشند، تعریف کلاسیک احتمال صحیح نیست.</p>
+        <p><strong>اصل ناکافی بودن دلیل:</strong>
+            اگر یک آزمایش تصادفی دارای $N$ نتیجه ممکنه$ \omega_1,\omega_2,...,\omega_N$ باشد و ما هیچ اطلاعی درباره نحوه
+            وقوع آنها نداشته باشیم، باید احتمال آنها را مساوی فرض کنیم. به بیان ریاضی:
+            $$P(\omega_1 )=P(\omega_2 )=...=P(\omega_N )=\frac{1}{N} $$</p>
+    </section>
+
+</div>
 </div>
